public/static/kubernetes/istio-canary.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata: 
  name: "canary"
  annotations: 
    msaez.io/y: "278"
    msaez.io/x: "535"
    msaez.io/DestinationRuleSubset_stable-v1: "[[485,280],[432,280],[432,469]]"
    msaez.io/DestinationRuleSubset_canary-v1: "[[536,328],[536,469]]"
spec: 
  hosts: 
    - "*"
  http: 
    - 
      name: ""
      route: 
        - 
          destination: 
            host: ""
            subset: "stable-v1"
          weight: 80
        - 
          destination: 
            host: ""
            subset: "canary-v1"
          weight: 20
      match: 
        - 
          uri: 
            prefix: "/"
      rewrite: 
        uri: "/"
  gateways: 
    - "main-gw"
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "Gateway"
metadata: 
  name: "main-gw"
  annotations: 
    msaez.io/y: "106"
    msaez.io/x: "537"
    msaez.io/VirtualService_canary: "[[536,156],[536,228]]"
spec: 
  selector: 
    istio: "ingressgateway"
  servers: 
    - 
      port: 
        number: 80
        name: "http"
        protocol: "HTTP"
      hosts: 
        - "*"
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata: 
  name: "drule"
  annotations: 
    msaez.io/y: "509"
    msaez.io/x: "533"
    msaez.io/height: "176"
spec: 
  host: ""
  subsets: 
    - 
      name: "stable-v1"
      labels: 
        version: "v1"
        app: "order-stable"
    - 
      name: "canary-v1"
      labels: 
        version: "v1"
        app: "order-canary"
